[package]
name = "jpq"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jpq"
crate-type = ["cdylib"]

[dependencies]
pest = "2.7.10"
pest_derive = "2.7.10"

[dependencies.pyo3]
version = "0.21.1"
features = ["abi3-py38"]
